# daily-science-digest-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  run_digest.sh
.github/workflows/: digest.yml
src/digest/: __main__.py  dedup.py  filter.py  main.py  models.py  output.py  ranker.py  summarizer.py
src/digest/sources/: __init__.py  arxiv.py  base.py  nature.py  quanta.py  scientific_american.py
tests/: test_dedup.py  test_filter.py  test_integration.py  test_ranker.py  test_sources.py
tests/fixtures/: arxiv_feed.xml  nature_feed.xml  quanta_feed.xml  sciam_page.html
